[package]
name = "tfio"
version = "0.1.31"
license = "MIT"
authors = ["Tanishq Jain <tanishqjain1002@gmail.com>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/GandalfTheGrayOfHell/tfio"
documentation = "https://docs.rs/tfio"
description = "A library that provides a Transaction-like interface that are traditionally used in databases on FileIO operations."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.8", features = ["v4"] }