[package]
name = "tfio"
version = "0.3.1"
license = "MIT"
authors = ["Tanishq Jain <tanishqjain1002@gmail.com>"]
edition = "2021"
rust-version = "1.85"
readme = "README.md"
repository = "https://github.com/MovAh13h/tfio"
documentation = "https://docs.rs/tfio"
description = "A library that provides a Transaction-like interface traditionally used in databases, applied to FileIO operations."

[features]
tokio = ["dep:tokio"]

[dependencies]
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["rt", "fs", "io-util"], optional = true }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }

[[example]]
name = "async_transaction"
required-features = ["tokio"]